# fastapi_app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/worflows/: ci.yaml
src/application/: commands.py  handlers.py  unit_of_work.py
src/domain/: factory.py  repository.py
src/domain/models/: role.py  user.py
src/entrypoints/: admin.py  fastapi_app.py  predict.py  users.py
src/infrastructure/auth/: dependencies.py  model.py  token_service.py
src/infrastructure/database/: db.py  model.py  repositories.py  uow.py
src/infrastructure/models/: onnx_service.py
