[project]
name = "fast-api-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Vera Adzhieva",email = "vera.adzhieva3003@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "onnxruntime (>=1.26.0,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]
